@@ -1,4 +1,0 @@
-{
-    "ip": "0.0.0.0",
-    "port": 4455
-}
